# vds-core

./: CMakeLists.txt
src/: CMakeLists.txt
src/config/: CMakeLists.txt  vds-config.h.in
src/crypto/: CMakeLists.txt  common.h
src/leveldb/: CMakeLists.txt
src/secp256k1/: CMakeLists.txt
src/univalue/: CMakeLists.txt
src/wallet/: CMakeLists.txt
src/zmq/: CMakeLists.txt
